--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -265,7 +265,12 @@
                         <div class="overlay">
                             <p>Geometria basica</p>
                             <div class="iconos-contendor">
-                                <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                                <a href="https://github.com/allen2564/GeometriaBasica.git" target="_blank"
+                                    rel="noopener noreferrer">
+                                    <i class="bi bi-github"></i>
+                                </a>
+                                <a href="https://matematicas-basica.netlify.app/" target="_blank"
+                                    rel="noopener noreferrer">
                                     <iconify-icon icon="logos:netlify"></iconify-icon>
                                 </a>
                             </div>
