--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <meta name="keywords" content="HTML, CSS3, JavaScript, React, Santiago Aguilar">
 
 
+    <!--Script-->
+    <script src="https://code.jquery.com/jquery-latest.js"></script>
+    <script src="arriba.js"></script>
     <!--CSS3-->
     <link rel="stylesheet" href="style.css">
     <!--Netlify-->
@@ -64,6 +67,10 @@
         </div>
     </nav>
 
+
+
+    <!--Seccion Arriba-->
+    <i class="bi arriba bi-arrow-up-circle-fill"></i>
     <!--Seccion Hero-->
 
     <section id="hero" class="hero align-items-stretch">
