--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="arriba.js"></script>
     <!--CSS3-->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="fonts.css">
     <!--Netlify-->
     <script src="https://code.iconify.design/iconify-icon/1.0.2/iconify-icon.min.js"></script>
     <!--Bootstrap-->
