--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <body>
     <!--Seccion Arriba-->
-    <span class="ir-arriba icon-arrow-up2"></span>
+    <span class="ir-arriba"><i class="bi bi-arrow-up-circle-fill"></i></span>
 
     <!--Barra de navegacion-->
     <nav class="navbar navbar-expand-md navbar-light ">
