--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
             <h1>Hola, soy Santiago Aguilar</h1>
             <h2>Desarrollo sitios web capaces de adapatarse a las necesidades de mis clientes, poseeo una gran formacion
                 que cada dia voy expandiendo sin limite alguno.</h2>
-                <a href="CurriculumVitae/CV.pdf" download="CV_Santiago_Aguilar.pdf"><button type="button" class="btn btn-dark">Descargar CV <i class="bi bi-file-earmark-arrow-down-fill"></i></button></a>
+            <a href="CurriculumVitae/CV.pdf" download="CV_Santiago_Aguilar.pdf"><button type="button"
+                    class="btn btn-dark">Descargar CV <i class="bi bi-file-earmark-arrow-down-fill"></i></button></a>
         </div>
 
         <div class="hero-inferior">
@@ -355,6 +356,25 @@
                                     target="_blank" rel="noopener noreferrer">
                                     <iconify-icon icon="ic:baseline-sim-card-download"></iconify-icon>
                                 </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--Proyecto 6-->
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="proyecto">
+                        <img src="images/Proyecto6.jpg" alt="4 x MIL">
+                        <div class="overlay">
+                            <p>App de passwords</p>
+                            <div class="iconos-contendor">
+                                <a href="https://calcualdoracolombiana.netlify.app/" target="_blank" rel="noopener noreferrer">
+                                    <iconify-icon icon="simple-icons:netlify"></iconify-icon>
+                                </a>
+                                <a href="https://github.com/allen2564/calculadoraColombiana.git" target="_blank"
+                                    rel="noopener noreferrer">
+                                    <iconify-icon icon="akar-icons:github-fill"></iconify-icon>
+                                </a>
+
                             </div>
                         </div>
                     </div>
