--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                     <div class="proyecto">
                         <img src="images/Proyecto6.jpg" alt="4 x MIL">
                         <div class="overlay">
-                            <p>App de passwords</p>
+                            <p>Calculadora del 4 x Mil</p>
                             <div class="iconos-contendor">
                                 <a href="https://calcualdoracolombiana.netlify.app/" target="_blank" rel="noopener noreferrer">
                                     <iconify-icon icon="simple-icons:netlify"></iconify-icon>
