--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 
     <!--Favicon-->
-    <link rel="shortcut icon" href="images/icon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/icono.ico" type="image/x-icon">
     <!--Titulo-->
     <title>Santiago A. Torres | Frontend Developer</title>
 </head>
@@ -43,7 +43,7 @@
     <nav class="navbar navbar-expand-md navbar-light ">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="images/icon.ico" width="50" alt="Logo"> <strong>Santiago Aguilar</strong>
+                <img src="images/icono.ico" width="50" alt="Logo"> <strong>Santiago Aguilar</strong>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -508,7 +508,7 @@
 
     <!--Footer-->
     <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center">
-        <img class="footer-icono" src="images/icon.ico" alt="Logo del Portafolio">
+        <img class="footer-icono" src="images/icono.ico" alt="Logo del Portafolio">
         <p class="fotter-texto text-center"> Aprendo y creo ideas todos los días.<br>Creemos un proyecto juntos</p>
         <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
             <a href="https://twitter.com/home" target="_blank" rel="noopener noreferrer"><i
