--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                 rel="noopener noreferrer"><i class="bi bi-facebook"></i></a>
             <a href="https://www.linkedin.com/in/alexander-torres-74a729137" target="_blank"
                 rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
-            <a href="https://www.instagram.com/santiago.ag016/" target="_blank" rel="noopener noreferrer"><i
+            <a href="https://instagram.com/__santiagoag__?igshid=ZDc4ODBmNjlmNQ==" target="_blank" rel="noopener noreferrer"><i
                     class="bi bi-instagram"></i></a>
             <a href="https://github.com/allen2564?tab=repositories" target="_blank" rel="noopener noreferrer"><i
                     class="bi bi-github"></i></a>
