--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                                 <a href="https://viernes-trece.netlify.app/" target="_blank" rel="noopener noreferrer">
                                     <iconify-icon icon="simple-icons:netlify"></iconify-icon>
                                 </a>
-                                <a href="https://github.com/allen2564/viernes_trece.git" target="_blank"
+                                <a href="https://github.com/metatech-programmer/viernes_trece.git" target="_blank"
                                     rel="noopener noreferrer">
                                     <iconify-icon icon="akar-icons:github-fill"></iconify-icon>
                                 </a>
@@ -314,7 +314,7 @@
                                     rel="noopener noreferrer">
                                     <iconify-icon icon="simple-icons:netlify"></iconify-icon>
                                 </a>
-                                <a href="https://github.com/allen2564/GeometriaBasica.git" target="_blank"
+                                <a href="https://github.com/metatech-programmer/GeometriaBasica.git" target="_blank"
                                     rel="noopener noreferrer">
                                     <iconify-icon icon="akar-icons:github-fill"></iconify-icon>
                                 </a>
@@ -332,7 +332,7 @@
                                 <a href="https://htmlpluss.netlify.app/" target="_blank" rel="noopener noreferrer">
                                     <iconify-icon icon="simple-icons:netlify"></iconify-icon>
                                 </a>
-                                <a href="https://github.com/allen2564/biologia.git" target="_blank"
+                                <a href="https://github.com/metatech-programmer/biologia.git" target="_blank"
                                     rel="noopener noreferrer">
                                     <iconify-icon icon="akar-icons:github-fill"></iconify-icon>
                                 </a>
@@ -348,7 +348,7 @@
                             <p>App de passwords</p>
                             <div class="iconos-contendor">
 
-                                <a href="https://github.com/allen2564/MePass.git" target="_blank"
+                                <a href="https://github.com/metatech-programmer/MePass.git" target="_blank"
                                     rel="noopener noreferrer">
                                     <iconify-icon icon="akar-icons:github-fill"></iconify-icon>
                                 </a>
@@ -367,7 +367,7 @@
                                 <a href="https://calcualdoracolombiana.netlify.app/" target="_blank" rel="noopener noreferrer">
                                     <iconify-icon icon="simple-icons:netlify"></iconify-icon>
                                 </a>
-                                <a href="https://github.com/allen2564/calculadoraColombiana.git" target="_blank"
+                                <a href="https://github.com/metatech-programmer/calculadoraColombiana.git" target="_blank"
                                     rel="noopener noreferrer">
                                     <iconify-icon icon="akar-icons:github-fill"></iconify-icon>
                                 </a>
@@ -378,7 +378,7 @@
                 </div>
             </div>
         </div>
-        <a href="https://github.com/allen2564?tab=repositories" target="_blank" rel="noopener noreferrer">
+        <a href="https://github.com/metatech-programmer?tab=repositories" target="_blank" rel="noopener noreferrer">
             <button type="button" class="btn btn-info">Ver mas proyectos
                 <i class="bi bi-arrow-right-circle-fill"></i></button></a>
 
@@ -452,7 +452,7 @@
                 rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
             <a href="https://instagram.com/__santiagoag__?igshid=ZDc4ODBmNjlmNQ==" target="_blank" rel="noopener noreferrer"><i
                     class="bi bi-instagram"></i></a>
-            <a href="https://github.com/allen2564?tab=repositories" target="_blank" rel="noopener noreferrer"><i
+            <a href="https://github.com/metatech-programmer?tab=repositories" target="_blank" rel="noopener noreferrer"><i
                     class="bi bi-github"></i></a>
             <a href="mailto:metatech000@gmail.com" target="_blank" rel="noopener noreferrer"><i
                     class="bi bi-envelope-at-fill"></i></a>
