--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                             <p>Viernes trece</p>
                             <div class="iconos-contendor">
                                 <a href="https://viernes-trece.netlify.app/" target="_blank" rel="noopener noreferrer">
-                                    <iconify-icon icon="simple-icons:netlify"></iconify-icon>
+                                    <iconify-icon icon="mingcute:link-fill"></iconify-icon>
                                 </a>
                                 <a href="https://github.com/metatech-programmer/viernes_trece.git" target="_blank"
                                     rel="noopener noreferrer">
@@ -312,7 +312,7 @@
                             <div class="iconos-contendor">
                                 <a href="https://matematicas-basica.netlify.app/" target="_blank"
                                     rel="noopener noreferrer">
-                                    <iconify-icon icon="simple-icons:netlify"></iconify-icon>
+                                    <iconify-icon icon="mingcute:link-fill"></iconify-icon>
                                 </a>
                                 <a href="https://github.com/metatech-programmer/GeometriaBasica.git" target="_blank"
                                     rel="noopener noreferrer">
@@ -330,7 +330,7 @@
                             <p>Biologia</p>
                             <div class="iconos-contendor">
                                 <a href="https://htmlpluss.netlify.app/" target="_blank" rel="noopener noreferrer">
-                                    <iconify-icon icon="simple-icons:netlify"></iconify-icon>
+                                    <iconify-icon icon="mingcute:link-fill"></iconify-icon>
                                 </a>
                                 <a href="https://github.com/metatech-programmer/biologia.git" target="_blank"
                                     rel="noopener noreferrer">
@@ -365,7 +365,7 @@
                             <p>Calculadora del 4 x Mil</p>
                             <div class="iconos-contendor">
                                 <a href="https://calcualdoracolombiana.netlify.app/" target="_blank" rel="noopener noreferrer">
-                                    <iconify-icon icon="simple-icons:netlify"></iconify-icon>
+                                    <iconify-icon icon="mingcute:link-fill"></iconify-icon>
                                 </a>
                                 <a href="https://github.com/metatech-programmer/calculadoraColombiana.git" target="_blank"
                                     rel="noopener noreferrer">
