--- a/index.html
+++ b/index.html
@@ -272,16 +272,12 @@
                 <!--Proyecto 1-->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="proyecto">
-                        <img src="images/Proyecto1.jpg" alt="vierner_trece">
+                        <img src="images/project-components.png" alt="Components_css">
                         <div class="overlay">
                             <p>Viernes trece</p>
                             <div class="iconos-contendor">
-                                <a href="https://viernes-trece.netlify.app/" target="_blank" rel="noopener noreferrer">
+                                <a href="https://components-css.netlify.app/" target="_blank" rel="noopener noreferrer">
                                     <iconify-icon icon="mingcute:link-fill"></iconify-icon>
-                                </a>
-                                <a href="https://github.com/metatech-programmer/viernes_trece.git" target="_blank"
-                                    rel="noopener noreferrer">
-                                    <iconify-icon icon="akar-icons:github-fill"></iconify-icon>
                                 </a>
                             </div>
                         </div>
@@ -291,13 +287,13 @@
                 <!--Proyecto 2-->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="proyecto">
-                        <img src="images/Proyecto3.jpg" alt="youtube">
+                        <img src="images/project_solever.png" alt="Solever">
                         <div class="overlay">
-                            <p>Canal de youtube</p>
+                            <p>Solever Company</p>
                             <div class="iconos-contendor">
-                                <a href="https://www.youtube.com/channel/UCzj-ZhQdvjyKO2219Ouq1Kw" target="_blank"
+                                <a href="https://soledad-en.netlify.app/" target="_blank"
                                     rel="noopener noreferrer">
-                                    <iconify-icon icon="mdi:youtube-tv"></iconify-icon>
+                                    <iconify-icon icon="mingcute:link-fill"></iconify-icon>
                                 </a>
                             </div>
                         </div>
@@ -306,17 +302,13 @@
                 <!--Proyecto 3-->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="proyecto">
-                        <img src="images/Proyecto4.jpg" alt="Geometria basica">
+                        <img src="images/project_recordip.png" alt="Recordip">
                         <div class="overlay">
-                            <p>Geometria Basica</p>
+                            <p>App de recuerdos PHP</p>
                             <div class="iconos-contendor">
-                                <a href="https://matematicas-basica.netlify.app/" target="_blank"
+                                <a href="https://recordip.3.us-1.fl0.io" target="_blank"
                                     rel="noopener noreferrer">
                                     <iconify-icon icon="mingcute:link-fill"></iconify-icon>
-                                </a>
-                                <a href="https://github.com/metatech-programmer/GeometriaBasica.git" target="_blank"
-                                    rel="noopener noreferrer">
-                                    <iconify-icon icon="akar-icons:github-fill"></iconify-icon>
                                 </a>
                             </div>
                         </div>
@@ -325,16 +317,12 @@
                 <!--Proyecto 4-->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="proyecto">
-                        <img src="images/Proyecto2.jpg" alt="Aprende HTML">
+                        <img src="images/project-pines.png" alt="Pines">
                         <div class="overlay">
-                            <p>Biologia</p>
+                            <p>Venta de Pins</p>
                             <div class="iconos-contendor">
-                                <a href="https://htmlpluss.netlify.app/" target="_blank" rel="noopener noreferrer">
+                                <a href="tuspinstunja-19yl.onrender.com" target="_blank" rel="noopener noreferrer">
                                     <iconify-icon icon="mingcute:link-fill"></iconify-icon>
-                                </a>
-                                <a href="https://github.com/metatech-programmer/biologia.git" target="_blank"
-                                    rel="noopener noreferrer">
-                                    <iconify-icon icon="akar-icons:github-fill"></iconify-icon>
                                 </a>
                             </div>
                         </div>
@@ -343,12 +331,12 @@
                 <!--Proyecto 5-->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="proyecto">
-                        <img src="images/Proyecto5.jpg" alt="MePass">
+                        <img src="images/project-me-pass.jpg" alt="MePass">
                         <div class="overlay">
                             <p>App de passwords</p>
                             <div class="iconos-contendor">
 
-                                <a href="https://github.com/metatech-programmer/MePass.git" target="_blank"
+                                <a href="https://github.com/metatech-programmer/MePass" target="_blank"
                                     rel="noopener noreferrer">
                                     <iconify-icon icon="akar-icons:github-fill"></iconify-icon>
                                 </a>
@@ -360,14 +348,14 @@
                 <!--Proyecto 6-->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="proyecto">
-                        <img src="images/Proyecto6.jpg" alt="4 x MIL">
+                        <img src="images/project-aprende-html.jpg" alt="Aprende HTML">
                         <div class="overlay">
-                            <p>Calculadora del 4 x Mil</p>
+                            <p>Aprende HTML</p>
                             <div class="iconos-contendor">
-                                <a href="https://calcualdoracolombiana.netlify.app/" target="_blank" rel="noopener noreferrer">
+                                <a href="https://htmlpluss.netlify.app/" target="_blank" rel="noopener noreferrer">
                                     <iconify-icon icon="mingcute:link-fill"></iconify-icon>
                                 </a>
-                                <a href="https://github.com/metatech-programmer/calculadoraColombiana.git" target="_blank"
+                                <a href="https://github.com/metatech-programmer/APRENDE-HTML" target="_blank"
                                     rel="noopener noreferrer">
                                     <iconify-icon icon="akar-icons:github-fill"></iconify-icon>
                                 </a>
