--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <nav class="navbar navbar-expand-md navbar-light ">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="images/icono.ico" width="50" alt="Logo"> <strong>Santiago Aguilar</strong>
+                <img src="images/icono.ico" width="50" style="object-fit: cover; object-position: center;" alt="Logo"> <strong>Santiago Aguilar</strong>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -79,7 +79,7 @@
     <section id="hero" class="hero align-items-stretch">
         <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
 
-            <img src="images/me-.jpeg" class="hero-imagen-desarrollador" alt="Foto de Santiago Aguilar">
+            <img src="images/me-.jpeg" class="hero-imagen-desarrollador" style="object-fit: cover; object-position: center;" alt="Foto de Santiago Aguilar">
 
             <h1>Hola, soy Santiago Aguilar</h1>
             <h2>Desarrollo sitios web capaces de adapatarse a las necesidades de mis clientes, poseeo una gran formacion
@@ -90,7 +90,7 @@
 
         <div class="hero-inferior">
             <svg class="hero-inferior-imagen img-fluid" width="955" height="540" overflow="visible"
-                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 955 480" alt="Programador, monitor">
+                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 955 480" style="object-fit: cover; object-position: center;" alt="Programador, monitor">
                 <defs>
                     <clippath id="a">
                         <path pointer-events="all" d="M134.643 71.3h685.715v483.4H134.643z"></path>
@@ -272,9 +272,9 @@
                 <!--Proyecto 1-->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="proyecto">
-                        <img src="images/project-components.png" alt="Components_css">
+                        <img src="images/project-components.png" style="object-fit: cover; object-position: center;" alt="Components_css">
                         <div class="overlay">
-                            <p>Viernes trece</p>
+                            <p>Pagina de componentes</p>
                             <div class="iconos-contendor">
                                 <a href="https://components-css.netlify.app/" target="_blank" rel="noopener noreferrer">
                                     <iconify-icon icon="mingcute:link-fill"></iconify-icon>
@@ -287,7 +287,7 @@
                 <!--Proyecto 2-->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="proyecto">
-                        <img src="images/project_solever.png" alt="Solever">
+                        <img src="images/project_solever.png" style="object-fit: cover; object-position: center;" alt="Solever">
                         <div class="overlay">
                             <p>Solever Company</p>
                             <div class="iconos-contendor">
@@ -302,7 +302,7 @@
                 <!--Proyecto 3-->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="proyecto">
-                        <img src="images/project_recordip.png" alt="Recordip">
+                        <img src="images/project_recordip.png" style="object-fit: cover; object-position: center;" alt="Recordip">
                         <div class="overlay">
                             <p>App de recuerdos PHP</p>
                             <div class="iconos-contendor">
@@ -317,7 +317,7 @@
                 <!--Proyecto 4-->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="proyecto">
-                        <img src="images/project-pines.png" alt="Pines">
+                        <img src="images/project-pines.png" style="object-fit: cover; object-position: center;" alt="Pines">
                         <div class="overlay">
                             <p>Venta de Pins</p>
                             <div class="iconos-contendor">
@@ -331,7 +331,7 @@
                 <!--Proyecto 5-->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="proyecto">
-                        <img src="images/project-me-pass.jpg" alt="MePass">
+                        <img src="images/project-me-pass.jpg" style="object-fit: cover; object-position: center;" alt="MePass">
                         <div class="overlay">
                             <p>App de passwords</p>
                             <div class="iconos-contendor">
@@ -348,7 +348,7 @@
                 <!--Proyecto 6-->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="proyecto">
-                        <img src="images/project-aprende-html.jpg" alt="Aprende HTML">
+                        <img src="images/project-aprende-html.jpg" style="object-fit: cover; object-position: center;" alt="Aprende HTML">
                         <div class="overlay">
                             <p>Aprende HTML</p>
                             <div class="iconos-contendor">
@@ -429,7 +429,7 @@
 
     <!--Footer-->
     <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center">
-        <img class="footer-icono" src="images/icono.ico" alt="Logo del Portafolio">
+        <img class="footer-icono" src="images/icono.ico" style="object-fit: cover; object-position: center;" alt="Logo del Portafolio">
         <p class="fotter-texto text-center"> Aprendo y creo ideas todos los días.<br>Creemos un proyecto juntos</p>
         <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
             <a href="https://twitter.com/home" target="_blank" rel="noopener noreferrer"><i
