update pin page

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                         <div class="overlay">
                             <p>Venta de Pins</p>
                             <div class="iconos-contendor">
-                                <a href="tuspinstunja-19yl.onrender.com" target="_blank" rel="noopener noreferrer">
+                                <a href="https://tuspinstunja-19yl.onrender.com" target="_blank" rel="noopener noreferrer">
                                     <iconify-icon icon="mingcute:link-fill"></iconify-icon>
                                 </a>
                             </div>
