--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
             <h1>Hola, soy Santiago Aguilar</h1>
             <h2>Desarrollo sitios web capaces de adapatarse a las necesidades de mis clientes, poseeo una gran formacion
                 que cada dia voy expandiendo sin limite alguno.</h2>
-            <a href="CurriculumVitae/Santiago Alexander Aguilar Torres · CV.pdf" download="CV_Santiago_Aguilar.pdf"><button type="button"
-                    class="btn btn-dark">Descargar CV <i class="bi bi-file-earmark-arrow-down-fill"></i></button></a>
+            <!-- <a href="CurriculumVitae/Santiago Alexander Aguilar Torres · CV.pdf" download="CV_Santiago_Aguilar.pdf"><button type="button"
+                    class="btn btn-dark">Descargar CV <i class="bi bi-file-earmark-arrow-down-fill"></i></button></a> -->
         </div>
 
         <div class="hero-inferior">
