--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <section id="hero" class="hero align-items-stretch">
         <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
 
-            <img src="images/me-.jpeg" class="hero-imagen-desarrollador" style="object-fit: cover;" alt="Foto de Santiago Aguilar">
+            <img src="https://avatars.githubusercontent.com/u/97856988?v=4" class="hero-imagen-desarrollador" style="object-fit: cover;" alt="Foto de Santiago Aguilar">
 
             <h1>Hola, soy Santiago Aguilar</h1>
             <h2>Desarrollo sitios web capaces de adapatarse a las necesidades de mis clientes, poseeo una gran formacion
