--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             <h1>Hola, soy Santiago Aguilar</h1>
             <h2>Desarrollo sitios web capaces de adapatarse a las necesidades de mis clientes, poseeo una gran formacion
                 que cada dia voy expandiendo sin limite alguno.</h2>
+                <h4>(Este Portafolio es bastante viejo midu, no te rayes con lo que veas.)</h4>
             <!-- <a href="CurriculumVitae/Santiago Alexander Aguilar Torres · CV.pdf" download="CV_Santiago_Aguilar.pdf"><button type="button"
                     class="btn btn-dark">Descargar CV <i class="bi bi-file-earmark-arrow-down-fill"></i></button></a> -->
         </div>
@@ -445,7 +446,7 @@
             <a href="mailto:metatech000@gmail.com" target="_blank" rel="noopener noreferrer"><i
                     class="bi bi-envelope-at-fill"></i></a>
         </div>
-        <div class="derechos-de-autor">Creado por Santiago Aguilar (2023) &#169;</div>
+        <div class="derechos-de-autor">Creado por Santiago Torres (2022)</div>
     </footer>
 
 
