--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Santiago Aguilar">
+    <meta name="author" content="Santiago Torres">
     <meta name="description" content="(Santiago A. Torres) - Portafolio de un nuevo Frontend developer.">
-    <meta name="keywords" content="HTML, CSS3, JavaScript, React, Santiago Aguilar">
+    <meta name="keywords" content="HTML, CSS3, JavaScript, React, Santiago Torres">
 
 
     <!--Script-->
@@ -43,7 +43,7 @@
     <nav class="navbar navbar-expand-md navbar-light ">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="images/icono.ico" width="50" style="object-fit: cover;" alt="Logo"> <strong>Santiago Aguilar</strong>
+                <img src="images/icono.ico" width="50" style="object-fit: cover;" alt="Logo"> <strong>Santiago Torres</strong>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -79,13 +79,13 @@
     <section id="hero" class="hero align-items-stretch">
         <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
 
-            <img src="https://avatars.githubusercontent.com/u/97856988?v=4" class="hero-imagen-desarrollador" style="object-fit: cover;" alt="Foto de Santiago Aguilar">
+            <img src="https://avatars.githubusercontent.com/u/97856988?v=4" class="hero-imagen-desarrollador" style="object-fit: cover;" alt="Foto de Santiago Torres">
 
-            <h1>Hola, soy Santiago Aguilar</h1>
+            <h1>Hola, soy Santiago Torres</h1>
             <h2>Desarrollo sitios web capaces de adapatarse a las necesidades de mis clientes, poseeo una gran formacion
                 que cada dia voy expandiendo sin limite alguno.</h2>
                 <h4>(Este Portafolio es bastante viejo midu, no te rayes con lo que veas.)</h4>
-            <!-- <a href="CurriculumVitae/Santiago Alexander Aguilar Torres · CV.pdf" download="CV_Santiago_Aguilar.pdf"><button type="button"
+            <!-- <a href="CurriculumVitae/Santiago Alexander Torres Torres · CV.pdf" download="CV_Santiago_Torres.pdf"><button type="button"
                     class="btn btn-dark">Descargar CV <i class="bi bi-file-earmark-arrow-down-fill"></i></button></a> -->
         </div>
 
@@ -202,7 +202,7 @@
 
     <section class="sobre-mi seccion-oscura">
         <div class="contenedor">
-            <h2 class="seccion-titulo">Conoce a Santiago Aguilar</h2>
+            <h2 class="seccion-titulo">Conoce a Santiago Torres</h2>
             <p class="seccion-texto">Soy un amante y apacionado de la tecnologia, con un recorrido en el ambito
                 tecnologico tan extenso como mi conocimiento adquirido en el mismo, me impresiona la evolucion que sufre
                 cada dia el mundo, pero se que este es el camino que me llevara al futuro...</p>
