--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <h1>Hola, soy Santiago Torres</h1>
             <h2>Desarrollo sitios web capaces de adapatarse a las necesidades de mis clientes, poseeo una gran formacion
                 que cada dia voy expandiendo sin limite alguno.</h2>
-                <h4>(Este Portafolio es bastante viejo midu, no te rayes con lo que veas.)</h4>
+                <p>(Este Portafolio es bastante viejo midu,prometo mejorarlo &#128512;.)</p>
             <!-- <a href="CurriculumVitae/Santiago Alexander Torres Torres · CV.pdf" download="CV_Santiago_Torres.pdf"><button type="button"
                     class="btn btn-dark">Descargar CV <i class="bi bi-file-earmark-arrow-down-fill"></i></button></a> -->
         </div>
